# org_base

./: .gitignore  ATTACHMENTS.md  BACKUP_RESTORE.md  CONVERSION.md  DOCUMENT_LINKS.md  DOCUMENT_METADATA.md  DOCX_IMPORT_EXPORT.md  LICENSE  QUICKSTART.md  README.md  REPOSITORY_STRUCTURE.md  VERSION  VIRTUAL_ENV.md  backup.bat  backup.sh  convert_documents.bat  convert_documents.sh  generate_pdf.bat  generate_pdf.sh  pyproject.toml  requirements.txt  restore.bat  restore.sh  run_server.bat  run_server.sh  version.py
config/: README.md  config.yaml
demo_documents/: company_info.yaml
demo_documents/ООО ТехноСервис/Отдел разработки/инструкции/: инструкция-по-разработке.md
demo_documents/ООО ТехноСервис/Отдел разработки/регламенты/: регламент-code-review.md
documents/ООО Компания/Бухгалтерия/регламенты/: регламент-учета-расходов.md
documents/ООО Компания/Отдел кадров/положения/: положение-об-отделе-кадров.md
documents/ООО Компания/Отдел кадров/приказы/: приказ-001.md
documents/ООО Компания/Отдел кадров/распоряжения/: распоряжение-001.md
scripts/: __init__.py  backup_restore.py  document_converter.py  document_parser.py  docx_converter.py  employee_parser.py  generate_pdf.py  git_hooks.py  init_history.py  server.py  version_tracker.py
templates/letterheads/: README.md
tests/: README.md  __init__.py  test_document_parser.py  test_version_tracker.py
web/static/css/: document.css  style.css
web/static/js/: main.js
web/templates/: document.html  document_version.html  employee.html  index.html
(+8 files in other folders)
