[project]
name = "org-base"
version = "0.0.1.5"
description = "Система ведения нормативной документации"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "LGPL-3.0"}
authors = [
    {name = "Michael BAG", email = "mk@p7net.ru"}
]
keywords = ["documents", "markdown", "pdf", "versioning", "normative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Documentation",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

